# EcoGrid

./: .gitattributes  .gitignore  BLOG.md  Dockerfile  PR_DESCRIPTION.md  README.md  app.py  baseline.py  colab_training.ipynb  docker-compose.yml  final_commit.bat  inference.py  pyproject.toml  requirements-train.txt  requirements.txt  run_demo.py  run_git.bat  train_unsloth.py  training_metrics.json
EcoGrid-main/: .gitignore  BLOG.md  Dockerfile  README.md  baseline.py  openenv.yaml  requirements-train.txt  requirements.txt  train_unsloth.py
EcoGrid-main/env/: dynamics.py  environment.py  reward.py  tasks.py
EcoGrid-main/lora_adapter/: README.md
EcoGrid-main/models/: __init__.py  schemas.py
EcoGrid-main/scripts/: benchmark.py  judge_validator.py  smoke_api.py
EcoGrid-main/server/: app.py
EcoGrid-main/tests/: test_action_utils.py  test_graders.py
artifacts/: dqn_state_dict.pt  export_model.py  model_config.json  model_metrics.json
colab/: train_rl_and_llm_traffic.ipynb
docs/: SPEC.md
env/: __init__.py  action_utils.py  dynamics.py  environment.py  reward.py  tasks.py
logs/: reward_curve.json
lora_adapter/: README.md  adapter_config.json  adapter_model.safetensors
models/: schemas.py
scripts/: generate_plots.py
server/: app.py  ecogrid_environment.py
test_env/: README.md
tests/: test_agent.py  test_baseline.py  test_env.py  test_environment.py  test_graders.py  test_multi_agent.py  test_reward.py  test_server_api.py  test_training_eval.py
traffic_rl/: __init__.py
traffic_rl/agent/: __init__.py  dqn_agent.py  replay_buffer.py
(+21 files in other folders)
